# cookiecutter-python-uv-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  codecov.yaml  mkdocs.yml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/scripts/: versioning_script.sh
{{cookiecutter.project_name}}/.github/workflows/: cleanup_cache.yml  validate-codecov-config.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/docs/content/: getting-started.md
{{cookiecutter.project_name}}/scripts/: gen_ref_pages.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: foo.py
